32bit build failure after r98624 https://bugs.webkit.org/show_bug.cgi?id=71064

Disambiguated operator overload with unsigned index (0u).

Reviewed by Sam Weinig.

* runtime/UString.h:
(JSC::operator==):


Canonical link: https://commits.webkit.org/87272@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98643 268f45cc-cd09-0410-ab3c-d52691b4dbfc